solve cors error using middleware, add passwordvisible state for InputFields component

--- a/src/output.css
+++ b/src/output.css
@@ -554,22 +554,236 @@ video {
   --tw-contain-style:  ;
 }
 
-.m-3 {
-  margin: 0.75rem;
+.absolute {
+  position: absolute;
 }
 
-.m-4 {
-  margin: 1rem;
+.relative {
+  position: relative;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.inset-1\/2 {
+  inset: 50%;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+.inset-60 {
+  inset: 15rem;
+}
+
+.inset-\[200px\] {
+  inset: 200px;
+}
+
+.inset-3 {
+  inset: 0.75rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.bottom-96 {
+  bottom: 24rem;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-80 {
+  top: 20rem;
+}
+
+.top-60 {
+  top: 15rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.left-40 {
+  left: 10rem;
+}
+
+.left-80 {
+  left: 20rem;
+}
+
+.right-\[20px\] {
+  right: 20px;
+}
+
+.right-\[100pxpx\] {
+  right: 100pxpx;
+}
+
+.right-\[100px\] {
+  right: 100px;
+}
+
+.right-\[500px\] {
+  right: 500px;
+}
+
+.right-\[700px\] {
+  right: 700px;
+}
+
+.right-\[10000px\] {
+  right: 10000px;
+}
+
+.right-\[1000px\] {
+  right: 1000px;
+}
+
+.right-\[900px\] {
+  right: 900px;
+}
+
+.right-\[800px\] {
+  right: 800px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.-bottom-20 {
+  bottom: -5rem;
+}
+
+.-bottom-24 {
+  bottom: -6rem;
+}
+
+.-bottom-\[100px\] {
+  bottom: -100px;
+}
+
+.-bottom-\[105px\] {
+  bottom: -105px;
+}
+
+.-bottom-\[106px\] {
+  bottom: -106px;
+}
+
+.-bottom-\[107px\] {
+  bottom: -107px;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
+.-left-10 {
+  left: -2.5rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.right-96 {
+  right: 24rem;
+}
+
+.right-\[600\] {
+  right: 600;
+}
+
+.right-\[600px\] {
+  right: 600px;
+}
+
+.right-\[800\] {
+  right: 800;
+}
+
+.right-\[900\] {
+  right: 900;
+}
+
+.right-\[750px\] {
+  right: 750px;
+}
+
+.right-\[730px\] {
+  right: 730px;
+}
+
+.right-\[770px\] {
+  right: 770px;
+}
+
+.right-\[780px\] {
+  right: 780px;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.left-20 {
+  left: 5rem;
+}
+
+.left-60 {
+  left: 15rem;
+}
+
+.left-52 {
+  left: 13rem;
+}
+
+.left-56 {
+  left: 14rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.bottom-7 {
+  bottom: 1.75rem;
+}
+
+.bottom-9 {
+  bottom: 2.25rem;
+}
+
+.bottom-\[38px\] {
+  bottom: 38px;
 }
 
 .mb-10 {
@@ -580,42 +794,6 @@ video {
   margin-left: 1.25rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .block {
   display: block;
 }
@@ -624,85 +802,36 @@ video {
   display: flex;
 }
 
-.size-2 {
-  width: 0.5rem;
-  height: 0.5rem;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
-.h-svh {
-  height: 100svh;
-}
-
 .h-24 {
   height: 6rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-32 {
-  height: 8rem;
 }
 
 .h-40 {
   height: 10rem;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
-.h-36 {
-  height: 9rem;
-}
-
-.w-\[45vw\] {
-  width: 45vw;
-}
-
-.w-svw {
-  width: 100svw;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-\[100\] {
-  width: 100;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-72 {
-  width: 18rem;
+.h-svh {
+  height: 100svh;
 }
 
 .w-64 {
   width: 16rem;
 }
 
-.w-60 {
-  width: 15rem;
+.w-\[45vw\] {
+  width: 45vw;
 }
 
-.flex-1 {
-  flex: 1 1 0%;
+.w-full {
+  width: 100%;
+}
+
+.w-svw {
+  width: 100svw;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .appearance-none {
@@ -719,40 +848,8 @@ video {
   flex-wrap: wrap;
 }
 
-.place-content-baseline {
-  place-content: baseline;
-}
-
-.place-content-stretch {
-  place-content: stretch;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.items-baseline {
-  align-items: baseline;
-}
-
-.justify-normal {
-  justify-content: normal;
-}
-
-.justify-start {
-  justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .justify-between {
@@ -763,80 +860,33 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-20 {
-  gap: 5rem;
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-36 {
   gap: 9rem;
 }
 
-.gap-40 {
-  gap: 10rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.self-auto {
-  align-self: auto;
-}
-
-.self-start {
-  align-self: flex-start;
-}
-
-.self-end {
-  align-self: flex-end;
-}
-
-.self-baseline {
-  align-self: baseline;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .rounded {
   border-radius: 0.25rem;
 }
 
-.border {
-  border-width: 1px;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+.border {
+  border-width: 1px;
 }
 
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-sky-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(125 211 252 / var(--tw-bg-opacity));
-}
-
-.bg-sky-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(186 230 253 / var(--tw-bg-opacity));
 }
 
 .bg-sky-100 {
@@ -848,16 +898,16 @@ video {
   padding: 2.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-4 {
@@ -870,50 +920,6 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pb-9 {
-  padding-bottom: 2.25rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-
-.pb-60 {
-  padding-bottom: 15rem;
-}
-
-.pb-32 {
-  padding-bottom: 8rem;
-}
-
-.align-baseline {
-  vertical-align: baseline;
-}
-
 .align-middle {
   vertical-align: middle;
 }
@@ -923,19 +929,9 @@ video {
   line-height: 1;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-xs {
@@ -943,12 +939,17 @@ video {
   line-height: 1rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-extrabold {
   font-weight: 800;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.font-bold {
+  font-weight: 700;
 }
 
 .lowercase {
@@ -957,6 +958,11 @@ video {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-700 {
@@ -969,15 +975,14 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .focus\:bg-white:focus {
